@@ -59,6 +59,8 @@ New in v0.8.00 (2016/07/??)
   - Fixed Bug #1624725, so that an include glob ending in "/" now includes folder contents (for globs with
     and without special characters). This preserves the behaviour that an expression ending in "/" only
     matches a folder, but now the contents of any matching folder is included.
+* Fix some issues with testing on MacOS
+* Fix problem with gpg2 in yakety and zesty
 
 
 New in v0.7.08 (2016/07/02)
